--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "classnames": "^2.2.6",
     "gatsby": "^2.8.3",
     "gatsby-image": "^2.1.2",
+    "gatsby-plugin-google-analytics": "^2.0.20",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-postcss": "^2.0.7",
     "gatsby-plugin-prefetch-google-fonts": "^1.4.2",
